# yc-chatbot

./: .envrc  .gitignore  README.md  pyproject.toml
modules/: fetch_stories.py  generate_reports.py  memory.py  questions_and_answers.py  store_embeddings.py
notebooks/: init.ipynb  workflow.ipynb
notebooks/.ipynb_checkpoints/: workflow-checkpoint.ipynb
testing/: fetch_stories.py  generate_reports.py  query_embeddings.py  questions_and_answers.py  store_embeddings.py  utils.py
tests/: test_generate_reports.py
