[tool.poetry]
name = "yc-chatbot"
version = "0.1.0"
description = "RAG application using open-source tools like LlamaIndex or LangChain to ingest, summarize, and query Hacker News events stored in a vector database."
authors = ["Martin Klosi <roise3000@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
beautifulsoup4 = "*"
chromadb = "*"
jupyter = "^1.1.1"
llama-index = "*"
python = "~3.10"
pytz = "*"
sentence-transformers = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
